cluster/apps/networking/traefik/external/iot/cam2/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: cam2
  namespace: external
subsets:
  - addresses:
      - ip: 10.40.0.20
    ports:
      - name: default
        port: 80
        protocol: TCP
