cluster/apps/networking/traefik/external/iot/cam2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cam2
  namespace: external
spec:
  ports:
    - name: default
      port: 80
      protocol: TCP
      targetPort: 80
  clusterIP: None
  type: ClusterIP
