cluster/apps/networking/traefik/external/iot/cam2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
    hajimari.io/icon: cctv
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-secured-chain@kubernetescrd,default-rewrite-cgi-bin@kubernetescrd
  name: cam2
  namespace: external
spec:
  ingressClassName: traefik
  rules:
    - host: "${SECRET_CAM2_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: cam2
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "${SECRET_CAM2_DOMAIN}"
      secretName: cam2-tls
